--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div class="send">
-					<input type="hidden" name ="etape" value="verificationMdp">
+					<input type="hidden" name ="etape" value="premiereSaisie">
 					<input type="submit" value="Envoyer">
 				</div>
 			</form>
