--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -71,6 +71,14 @@
 			</form>
 		</div>
 	</div>
+	
+	
+	<div>
+		<form action="AfficherListe" method="post">
+			<input type="hidden" name="option" value="afficherListe">
+			<input type="submit" value="afficher liste">
+		</form>
+	</div>
 
 
 </body>
